# graph

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
graphs/: Graph.h  IndexPersistentVector.h  Vertex.h  graphs.h  index_persistent_vector.h
graphs/bits/: Graph_detail.h  IndexPersistentVector_detail.h  Vertex_detail.h
test/: CMakeLists.txt  Graph.cpp  IndexPersistentVector.cpp  Vertex.cpp  main.cpp
